bynkc/tests/fixtures/negative/37_method_not_found/input.karn
commons test {
  type Box = { value: Int }

  fn bad(b: Box) -> Int {
    b.doStuff()
  }
}
